--- a/README.Rmd
+++ b/README.Rmd
@@ -25,30 +25,117 @@ The goal of iriR is to ...
 You can install the released version of iriR from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("iriR")
+devtools::install_github("warint/iriR")
 ```
 
-## Example
+## Overview of the available data
 
-This is a basic example which shows you how to solve a common problem:
+Users can recreate in R impactful dashboards and visualizations as the ones found on [www.socialprogress.org](http://www.socialprogress.org){target="_blank"}: [click here](https://www.socialprogress.org/?tab=2&code=NOR&embedded=true){target="_blank"}
 
-```{r example}
-library(iriR)
-## basic example code
+
+## Installation
+
+You can install the current development version of 'iriR' with:
+
+```{r, eval = FALSE}
+devtools::install_github("warint/spiR")
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
+## How-To
+
+### Step 1: Getting the country's ISO code
+
+A user needs to enter the ISO code of a country. To have access to this code, the following function provides this information.
+
+```{r, eval = FALSE}
+sqs_iri_country() # A list of all countries will be produced
+
+sqs_iri_country(country = "Canada") # The ISO code for Canada will be produced
+
+sqs_iri_country("Canada") # The ISO code for Canada will be produced
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
+### Step 2: Getting the indicator's code
 
-You can also embed plots, for example:
+A user needs to enter the code of the desired indicator. To do so, the following function provides access to all the indicators of interest.
 
-```{r pressure, echo = FALSE}
-plot(pressure)
+```{r, eval = FALSE}
+sqs_spi_indicator() # A list of all indicators will be produced
+
+sqs_spi_indicator(indicators = "sales") # A list with all the variables including "sales" will be produced
+
+sqs_spi_indicator("sales") # A list with all the variables including "sales" will be produced
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
+### Step 3: Getting the company' name
+
+A user needs to enter the name of the desired company. To do so, the following function provides access to all the companies of interest.
+
+```{r, eval = FALSE}
+sqs_iri_company() # A list of all companies will be produced
+
+sqs_iri_company(company = "Samsung") # A list with all the variables including "Samsung" will be produced
+
+sqs_spi_indicator("Samsung") # A list with all the variables including "Samsung" will be produced
+```
+
+### Step 4: Getting the industry' name
+
+A user needs to enter the name of the desired industry. To do so, the following function provides access to all the industries of interest.
+
+
+```{r, eval = FALSE}
+sqs_iri_industry() # A list of all companies will be produced
+
+sqs_iri_industry(industry = "Automobile") # A list with all the variables including "Automobile" will be produced
+
+sqs_iri_industry("Automobile")# A list with all the variables including "Automobile" will be produced
+```
+
+
+
+### Step 5: Getting the data
+
+Once the user knows all the arguments, s.he can collect the data in a very easy way through this function:
+
+```{r, eval=FALSE}
+sqs_iri_data(country = "USA", years = "2018", indicators = "RD.euro", company = "FORD MOTOR", industry = "Automobiles & Parts", rank = 14)  # It generates a data frame of the overall IRI data for American company "FORD MOTOR" in 2018.
+
+sqs_iri_data(country=c("USA", "FRA"), years="2018",) # It generates a data frame of all the companies data from all the industries for the USA and France in 2018.
+
+sqs_iri_data(years = "2018") # It generates a data frame of all the companies data for from all the industries for all the countries in 2018.
+
+sqs_iri_data() # It generates a data frame of the complete dataset
+```
+
+
+### Cite 'iriR'
+
+To cite the 'iriR' package in your work:
+
+Warin, T. (2019). "spiR: Client for the Social Progress Index. v0.1.0."
+
+```{r,eval=FALSE}
+@article{Warin2019,
+author = "Thierry Warin",
+title = "{spiR: An R Package for the Social Progress Index}",
+year = "2019",
+month = "12",
+url = "https://figshare.com/articles/spiR_Client_for_Social_Progress_Index_Data/11421573",
+doi = "10.6084/m9.figshare.11421573.v2"
+}
+```
+
+### Why SQS ?
+
+SQS stands for SKEMA Quantum Studio, a research and technological development centre based in Montreal, Canada, that serves as the engine room for the SKEMA Global lab in AI.
+
+SKEMA Quantum Studio is also a state-of-the-art platform developed by our team that enables scholars, students and professors to access one of the most powerful analytical tools in higher education. By using data science and artificial intelligence within the platform, new theories, methods and concepts are being developed to study globalisation, innovation and digital transformations that our society faces.
+
+To learn more about the SKEMA Quantum Studio and the mission of the SKEMA Global Lab in AI, please visit the following websites : [SQS]( https://quantumstudio.skemagloballab.io) ; [Global Lab](https://skemagloballab.io/).
+
+### Acknowledgments
+
+The author would like to thank the Center for Interuniversity Research and Analysis of Organizations (CIRANO, Montreal) for its support, as well as Thibault Senegas, Marine Leroi and Martin Paquette at SKEMA Global Lab in AI. The usual caveats apply.
+
