--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of iriR is to ...
+The goal of iriR is to easily access the EU Industrial Research and Industry Scoreboard.
 
 ## Installation
 
@@ -30,7 +30,6 @@ devtools::install_github("warint/iriR")
 
 ## Overview of the available data
 
-Users can recreate in R impactful dashboards and visualizations as the ones found on [www.socialprogress.org](http://www.socialprogress.org){target="_blank"}: [click here](https://www.socialprogress.org/?tab=2&code=NOR&embedded=true){target="_blank"}
 
 
 ## Installation
@@ -38,7 +37,7 @@ Users can recreate in R impactful dashboards and visualizations as the ones foun
 You can install the current development version of 'iriR' with:
 
 ```{r, eval = FALSE}
-devtools::install_github("warint/spiR")
+devtools::install_github("warint/iriR")
 ```
 
 
@@ -112,20 +111,8 @@ sqs_iri_data() # It generates a data frame of the complete dataset
 
 ### Cite 'iriR'
 
-To cite the 'iriR' package in your work:
+...
 
-Warin, T. (2019). "spiR: Client for the Social Progress Index. v0.1.0."
-
-```{r,eval=FALSE}
-@article{Warin2019,
-author = "Thierry Warin",
-title = "{spiR: An R Package for the Social Progress Index}",
-year = "2019",
-month = "12",
-url = "https://figshare.com/articles/spiR_Client_for_Social_Progress_Index_Data/11421573",
-doi = "10.6084/m9.figshare.11421573.v2"
-}
-```
 
 ### Why SQS ?
 
