--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -50,11 +50,11 @@ devtools::install_github("warint/spiR")
 A user needs to enter the ISO code of a country. To have access to this code, the following function provides this information.
 
 ```{r, eval = FALSE}
-sqs_iri_country() # A list of all countries will be produced
+iri_country() # A list of all countries will be produced
 
-sqs_iri_country(country = "Canada") # The ISO code for Canada will be produced
+iri_country(country = "Canada") # The ISO code for Canada will be produced
 
-sqs_iri_country("Canada") # The ISO code for Canada will be produced
+iri_country("Canada") # The ISO code for Canada will be produced
 ```
 
 ### Step 2: Getting the indicator's code
@@ -62,11 +62,11 @@ sqs_iri_country("Canada") # The ISO code for Canada will be produced
 A user needs to enter the code of the desired indicator. To do so, the following function provides access to all the indicators of interest.
 
 ```{r, eval = FALSE}
-sqs_iri_indicator() # A list of all indicators will be produced
+iri_indicator() # A list of all indicators will be produced
 
-sqs_iri_indicator(indicators = "sales") # A list with all the variables including "sales" will be produced
+iri_indicator(indicators = "sales") # A list with all the variables including "sales" will be produced
 
-sqs_iri_indicator("sales") # A list with all the variables including "sales" will be produced
+iri_indicator("sales") # A list with all the variables including "sales" will be produced
 ```
 
 ### Step 3: Getting the company' name
@@ -74,11 +74,11 @@ sqs_iri_indicator("sales") # A list with all the variables including "sales" wil
 A user needs to enter the name of the desired company. To do so, the following function provides access to all the companies of interest.
 
 ```{r, eval = FALSE}
-sqs_iri_company() # A list of all companies will be produced
+iri_company() # A list of all companies will be produced
 
-sqs_iri_company(company = "Samsung") # A list with all the variables including "Samsung" will be produced
+iri_company(company = "Samsung") # A list with all the variables including "Samsung" will be produced
 
-sqs_spi_indicator("Samsung") # A list with all the variables including "Samsung" will be produced
+iri_indicator("Samsung") # A list with all the variables including "Samsung" will be produced
 ```
 
 ### Step 4: Getting the industry' name
@@ -87,11 +87,11 @@ A user needs to enter the name of the desired industry. To do so, the following 
 
 
 ```{r, eval = FALSE}
-sqs_iri_industry() # A list of all companies will be produced
+iri_industry() # A list of all companies will be produced
 
-sqs_iri_industry(industry = "Automobile") # A list with all the variables including "Automobile" will be produced
+iri_industry(industry = "Automobile") # A list with all the variables including "Automobile" will be produced
 
-sqs_iri_industry("Automobile")# A list with all the variables including "Automobile" will be produced
+iri_industry("Automobile")# A list with all the variables including "Automobile" will be produced
 ```
 
 
@@ -101,11 +101,11 @@ sqs_iri_industry("Automobile")# A list with all the variables including "Automob
 Once the user knows all the arguments, s.he can collect the data in a very easy way through this function:
 
 ```{r, eval=FALSE}
-sqs_iri_data(country = "USA", years = "2018", indicators = "RD.euro", company = "FORD MOTOR", industry = "Automobiles & Parts", rank = 14)  # It generates a data frame of the overall IRI data for American company "FORD MOTOR" in 2018.
+iri_data(country = "USA", years = "2018", indicators = "RD.euro", company = "FORD MOTOR", industry = "Automobiles & Parts", rank = 14)  # It generates a data frame of the overall IRI data for American company "FORD MOTOR" in 2018.
 
-sqs_iri_data(country=c("USA", "FRA"), years="2018",) # It generates a data frame of all the companies data from all the industries for the USA and France in 2018.
+iri_data(country=c("USA", "FRA"), years="2018",) # It generates a data frame of all the companies data from all the industries for the USA and France in 2018.
 
-sqs_iri_data(years = "2018") # It generates a data frame of all the companies data for from all the industries for all the countries in 2018.
+iri_data(years = "2018") # It generates a data frame of all the companies data for from all the industries for all the countries in 2018.
 
-sqs_iri_data() # It generates a data frame of the complete dataset
+iri_data() # It generates a data frame of the complete dataset
 ```
