--- a/README.Rmd
+++ b/README.Rmd
@@ -135,4 +135,4 @@ Reuse is allowed, provided appropriate credit is given and changes are indicated
 
 ### Acknowledgments
 
-The author would like to thank the Center for Interuniversity Research and Analysis of Organizations (CIRANO, Montreal) for its support, as well as Thibault Senegas, Marine Leroi and Martin Paquette at SKEMA Global Lab in AI. The usual caveats apply.
+The author would like to thank the Center for Interuniversity Research and Analysis of Organizations (CIRANO, Montreal) for its support, as well as Thibault Senegas, Marine Leroi and Martin Paquette. The usual caveats apply.
