--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -27,7 +27,7 @@ To learn more about IRI and follow the work of the European Comission, please vi
 
 ## Installation
 
-You can install the released version of iriR from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of iriR from [GitHub](https://github.com/warint/EpiBibR) with:
 
 ``` r
 devtools::install_github("warint/iriR")
@@ -42,6 +42,10 @@ You can install the current development version of 'iriR' with:
 devtools::install_github("warint/spiR")
 ```
 
+```{r, echo=FALSE}
+library(iriR)
+```
+
 
 ## How-To
 
@@ -50,11 +54,11 @@ devtools::install_github("warint/spiR")
 A user needs to enter the ISO code of a country. To have access to this code, the following function provides this information.
 
 ```{r, eval = FALSE}
-iri_country() # A list of all countries will be produced
+irir_country() # A list of all countries will be produced
 
-iri_country(country = "Canada") # The ISO code for Canada will be produced
+irir_country(country = "Canada") # The ISO code for Canada will be produced
 
-iri_country("Canada") # The ISO code for Canada will be produced
+irir_country("Canada") # The ISO code for Canada will be produced
 ```
 
 ### Step 2: Getting the indicator's code
@@ -62,11 +66,11 @@ iri_country("Canada") # The ISO code for Canada will be produced
 A user needs to enter the code of the desired indicator. To do so, the following function provides access to all the indicators of interest.
 
 ```{r, eval = FALSE}
-iri_indicator() # A list of all indicators will be produced
+irir_indicator() # A list of all indicators will be produced
 
-iri_indicator(indicators = "sales") # A list with all the variables including "sales" will be produced
+irir_indicator(indicators = "sales") # A list with all the variables including "sales" will be produced
 
-iri_indicator("sales") # A list with all the variables including "sales" will be produced
+irir_indicator("sales") # A list with all the variables including "sales" will be produced
 ```
 
 ### Step 3: Getting the company' name
@@ -74,11 +78,11 @@ iri_indicator("sales") # A list with all the variables including "sales" will be
 A user needs to enter the name of the desired company. To do so, the following function provides access to all the companies of interest.
 
 ```{r, eval = FALSE}
-iri_company() # A list of all companies will be produced
+irir_company() # A list of all companies will be produced
 
-iri_company(company = "Samsung") # A list with all the variables including "Samsung" will be produced
+irir_company(company = "Samsung") # A list with all the variables including "Samsung" will be produced
 
-iri_indicator("Samsung") # A list with all the variables including "Samsung" will be produced
+irir_indicator("Samsung") # A list with all the variables including "Samsung" will be produced
 ```
 
 ### Step 4: Getting the industry' name
@@ -87,11 +91,11 @@ A user needs to enter the name of the desired industry. To do so, the following 
 
 
 ```{r, eval = FALSE}
-iri_industry() # A list of all companies will be produced
+irir_industry() # A list of all companies will be produced
 
-iri_industry(industry = "Automobile") # A list with all the variables including "Automobile" will be produced
+irir_industry(industry = "Automobile") # A list with all the variables including "Automobile" will be produced
 
-iri_industry("Automobile")# A list with all the variables including "Automobile" will be produced
+irir_industry("Automobile")# A list with all the variables including "Automobile" will be produced
 ```
 
 
@@ -101,11 +105,106 @@ iri_industry("Automobile")# A list with all the variables including "Automobile"
 Once the user knows all the arguments, s.he can collect the data in a very easy way through this function:
 
 ```{r, eval=FALSE}
-iri_data(country = "USA", years = "2018", indicators = "RD.euro", company = "FORD MOTOR", industry = "Automobiles & Parts", rank = 14)  # It generates a data frame of the overall IRI data for American company "FORD MOTOR" in 2018.
+irir_data(country = "USA", years = "2018", indicators = "RD.euro", company = "FORD MOTOR", industry = "Automobiles & Parts", rank = 14)  # It generates a data frame of the overall IRI data for American company "FORD MOTOR" in 2018.
 
-iri_data(country=c("USA", "FRA"), years="2018",) # It generates a data frame of all the companies data from all the industries for the USA and France in 2018.
+irir_data(country=c("USA", "FRA"), years="2018",) # It generates a data frame of all the companies data from all the industries for the USA and France in 2018.
 
-iri_data(years = "2018") # It generates a data frame of all the companies data for from all the industries for all the countries in 2018.
+irir_data(years = "2018") # It generates a data frame of all the companies data for from all the industries for all the countries in 2018.
 
-iri_data() # It generates a data frame of the complete dataset
+irir_data() # It generates a data frame of the complete dataset
+```
+
+## Create visuals with irir_visual
+
+irir_visual fonction allows to create three type of visuals from the IRI Scoreboard for data on innovation : barcharts, linecharts and pointcharts.
+
+By default, graphs will illustrate top 5 countries and Canada. 
+
+However, users can modify the graphs as they wish with these arguments :
+
+**Country**
+
+- From the ISO codes provided by the irir_country() function, users can can choice which country they want to add to the top 5 or make it appear.
+
+- If there is no country code but an empty argument, only top 5 will appear.
+
+**Chart**
+
+- Each chart illustrates a different data from the IRI Scoreboard
+  - bar_1 : Number of leading companies in R&D for the most represented countries
+  - bar_2 : Number of leading companies in R&D per 100 billion $US of GDP for the most represented countries
+  - bar_3 : R&D expenditures of the leading companies for the most represented countries
+  - line_1 : Evolution as regards the number of leading companies in R&D for the most represented countries
+  - line_2 : Evolution as regards the number of leading companies in R&D per 100 billion $US of GDP for
+  - line_3 : Evolution as regards R&D expenditures of the leading companies for the the most represented countries
+  - line_4 : Evolution as regards the number of leading companies in R&D & the total of their R&D investments (in millions of $US)")
+  - line_5 : Evolution as regards the percentage of R&D investments made by companies of the total R&D investments."
+  - line_6 : Evolution as regards the R&D per employee in $US
+  - point_1 : Net sales/R&D investment ratio per total R&D investment for the the most represented countries
+  
+**Years**  
+
+- Allows you to choose which year will be used in the chart. If no year is set, the latest available will be used. 
+
+
+### Barcharts
+
+Country set to Canada by default. If there is no country code but an empty argument, only top 5 will appear as below. 
+
+```{r}
+irir_visual(country = "" ,chart = "bar_1")
+```
+
+If the argument "country" is missing, Canada will be included by default
+
+```{r}
+irir_visual(chart = "bar_1")
+```
+
+However, you can choose the country of your choice to be included.
+
+```{r}
+irir_visual(country = "FRA",  chart = "bar_1")
+```
+
+The same logic applies for the two other bar charts
+
+
+```{r}
+irir_visual(chart = "bar_2")
+```
+
+
+```{r}
+irir_visual(chart = "bar_3")
+```
+
+### Linecharts
+
+```{r}
+irir_visual(chart = "line_1")
+```
+
+
+```{r}
+irir_visual(country= "IND", chart = "line_2")
+```
+
+```{r}
+irir_visual( chart = "line_3")
+```
+```{r}
+irir_visual( chart = "line_4")
+```
+
+```{r}
+irir_visual( chart = "line_5")
+```
+
+```{r}
+irir_visual( chart = "line_6")
+```
+
+```{r}
+irir_visual( chart = "point_1")
 ```
