--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,6 @@ For more information about IRI and follow the work of the European Comission, pl
 ## Installation
 
 
-
 You can install the current development version of 'iriR' with devtools:
 
 ```{r, eval = FALSE}
@@ -133,61 +132,26 @@ However, users can modify the graphs as they wish with these arguments :
 **Chart**
 
 - Each chart illustrates a different data from the IRI Scoreboard
-  - bar_1
-  - bar_2
-  - bar_3
-  - line_1
-  - line_2
-  - line_3
-  - line_4
-  - line_5
-  - line_6
-  - point_1
+  - bar_1 : Number of leading companies in R&D for the most represented countries
+  - bar_2 : Number of leading companies in R&D per 100 billion $US of GDP for the most represented countries
+  - bar_3 : R&D expenditures of the leading companies for the most represented countries
+  - line_1 : Evolution as regards the number of leading companies in R&D for the most represented countries
+  - line_2 : Evolution as regards the number of leading companies in R&D per 100 billion $US of GDP for
+  - line_3 : Evolution as regards R&D expenditures of the leading companies for the the most represented countries
+  - line_4 : Evolution as regards the number of leading companies in R&D & the total of their R&D investments (in millions of $US)")
+  - line_5 : Evolution as regards the percentage of R&D investments made by companies of the total R&D investments."
+  - line_6 : Evolution as regards the R&D per employee in $US
+  - point_1 : Net sales/R&D investment ratio per total R&D investment for the the most represented countries
+  
+**Years**  
 
-### Barcharts
+- Allows you to choose which year will be used in the chart. If no year is set, the latest available will be used. 
+- Only works with barcharts
 
-Country set to Canada by default. If there is no country code but an empty argument, only top 5 will appear as below. 
-
-```{r}
-irir_visual(country = "" ,chart = "bar_1")
-```
-
-If the argument "country" is missing, Canada will be included by default
 
 ```{r}
 irir_visual(chart = "bar_1")
-
 ```
-
-However, you can choose the country of your choice to be included.
-
-```{r}
-irir_visual(country = "FRA",  chart = "bar_1")
-```
-
-The same logic applies for the two other bar charts
-
-
-```{r}
-irir_visual(chart = "bar_2")
-```
-
-
-```{r}
-irir_visual(chart = "bar_3")
-```
-
-### Linecharts
-
-```{r}
-
-```
-
-
-
-bar123
-line6
-point1
 
 ### Cite 'iriR'
 
