--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -20,9 +20,9 @@ The IRI Scoreboard for data on innovation, managed by the European Commission, l
 
 The IRI aims at providing robust data and analysis on the contribution of private-sector R&D to sustainable competitiveness and "prosperity" in the EU.  With iriR, we want to make easily available the IRI's data and modestly help the European Commission in achieving its goals, such as open the data to EU policy-makers, academia, and other institutional and economic actors.
 
-Through our R package, people can see the six parameters that composed the global IRI'data on R&D : Country, Year, Company's name, Industry, Indicator and Compaany's rank.
+Through our R package, people can see the six parameters that composed the global IRI's data on R&D : Country, Year, Company's name, Industry, Indicator and Company's rank.
 
-To learn more about IRI and follow the work of the European Comission, please visit this [page](https://iri.jrc.ec.europa.eu/home/). To see a definition of the indicators, please visit this [page](https://iri.jrc.ec.europa.eu/sites/default/files/2019-12/SB2019_Final_18Dec2019_0.pdf). See below to have access through iriR to the whole list of indicators,industries, companies and countries.
+To learn more about IRI and follow the work of the European Commission, please visit this [page](https://iri.jrc.ec.europa.eu/home/). To see a definition of the indicators, please visit this [page](https://iri.jrc.ec.europa.eu/sites/default/files/2019-12/SB2019_Final_18Dec2019_0.pdf). See below to have access through iriR to the whole list of indicators,industries, companies and countries.
 
 
 ## Installation
